--- a/Oddmatics-IO/Oddmatics-IO.csproj
+++ b/Oddmatics-IO/Oddmatics-IO.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ByteParse.cs" />
+    <Compile Include="StringConversion.cs" />
     <Compile Include="Files.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensions.cs" />
