Update assembly name

--- a/Oddmatics-IO/Oddmatics-IO.csproj
+++ b/Oddmatics-IO/Oddmatics-IO.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Oddmatics.Util.IO</RootNamespace>
-    <AssemblyName>Oddmatics-IO</AssemblyName>
+    <AssemblyName>Oddmatics.Util.IO</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -21,7 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\Oddmatics-IO.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\Oddmatics.Util.IO.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,7 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\Oddmatics-IO.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\Oddmatics.Util.IO.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
