--- a/Oddmatics-IO/Oddmatics-IO.csproj
+++ b/Oddmatics-IO/Oddmatics-IO.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{EEA758E7-AFD7-4565-A686-D49EA4528C32}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Oddmatics.Util.IO</RootNamespace>
-    <AssemblyName>Oddmatics.Util.IO</AssemblyName>
+    <RootNamespace>Oddmatics.Util</RootNamespace>
+    <AssemblyName>Oddmatics.Util</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -21,7 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\Oddmatics.Util.IO.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\Oddmatics.Util.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,7 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\Oddmatics.Util.IO.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\Oddmatics.Util.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -42,13 +42,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ByteParse.cs" />
-    <Compile Include="GetBytesExtensions.cs" />
-    <Compile Include="StringConversion.cs" />
-    <Compile Include="Files.cs" />
+    <Compile Include="Collections\CappedStack.cs" />
+    <Compile Include="IO\ByteParse.cs" />
+    <Compile Include="IO\GetBytesExtensions.cs" />
+    <Compile Include="IO\StringConversion.cs" />
+    <Compile Include="IO\Files.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StringExtensions.cs" />
+    <Compile Include="IO\StringExtensions.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
