Add IList<T>.Match(IList list2) function

--- a/Oddmatics-IO/Oddmatics-IO.csproj
+++ b/Oddmatics-IO/Oddmatics-IO.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Collections\CappedStack.cs" />
+    <Compile Include="Collections\IListExtensions.cs" />
     <Compile Include="Collections\KeyValueEventCollection.cs" />
     <Compile Include="Events\ValueChangedEvent.cs" />
     <Compile Include="Events\ICancellable.cs" />
